--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
                 <h1>aside</h1>
         </aside>
         <section>
-            <article><h1>article 1</h1></article>
+            <article>
+                <h1>article 1</h1>
+                 <p class="pera">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, inventore!</p>
+            </article>
             <article class="article2"><h1>article 2</h1></article>
         </section>
     </main>
